[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["async_http_test"]

[project]
name = "async_http"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["requests", "rich", "httpx", "aiohttp", "aiofiles"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pre-commit", "mypy"]

[tool.mypy]
strict = true
