[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["async_http_test"]

[project]
name = "async_http"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["requests", "rich", "httpx", "aiohttp", "aiofiles"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pre-commit", "ruff", "mypy", "pylint"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    # flake8-bandit
    "S",
    # pydocstyle
    "D",
    # isort
    "I",
]

ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]

[tool.mypy]
strict = true

[tool.pylint]
disable = [
    # Ignore missing docstring because ruff will get it with D103
    "C0116",
    # Ignore missing top of file docstring because ruff will get it with D100
    "C0114",
]
